--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
+:root{
+  --darkest: #134611;
+  --darker: #3E8914;
+  --mid: #3DA35D;
+  --brighter:#96E072;
+  --brightest:#E8FCCF;
+  font-family: "Pretendard-Medium", Helvetica;
+
+}
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +50,10 @@
   to {
     transform: rotate(360deg);
   }
+}
+.app-container{
+  margin: 0;
+  padding: 0;
+  height: auto;
+  align-items: center; 
 }
