--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,16 @@
   --mid: #3DA35D;
   --brighter:#96E072;
   --brightest:#E8FCCF;
-  font-family: "Pretendard-Medium", Helvetica;
+  /* font-family: "Pretendard-Medium", Helvetica; */
+  --font-family-sans: 'Pretendard', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 
 }
 html, body {
   margin: 0;
   padding: 0;
   height: 100%;
+  font-family: var(--font-family-sans);
+
 }
 
 .App {
