--- a/src/pages/dormitoryPage.css
+++ b/src/pages/dormitoryPage.css
@@ -13,7 +13,8 @@
   }
   
   .dormitoryText {
-    width: 70%;
+    width: auto;
+    margin-bottom: 10%;  
     height: 10%;
     padding-bottom: 5%;
     padding-top: 23%;
