--- a/src/pages/loginPage.css
+++ b/src/pages/loginPage.css
@@ -21,7 +21,7 @@
     padding-left: 5%;
     padding-right: 5%;
     margin-bottom: 5%;
-    color: var(--darker);
+    color: var(--darkest);
     font-size: 52px;
     font-weight: 500;
     margin: 0 auto;
