--- a/src/pages/mainPage.css
+++ b/src/pages/mainPage.css
@@ -46,7 +46,7 @@
     /* padding: 5px;
     margin-right: 5px; */
     padding: 0px 1em;
-    border: 2px solid var(--darker);
+    border: 2px solid var(--darkest);
     border-radius: 9px;
     height: 2.5em;
     width:13em;
@@ -68,7 +68,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: var(--mid);
+    background-color: var(--darker);
     padding: 0.9em 1.2em;
     border-radius: 9px;
     color: white;
@@ -124,7 +124,7 @@
 
   }
   .hungry-button {
-    background-color: var(--mid);
+    background-color: var(--darker);
     border-radius: 10px;
     color: white;
     /* justify-content: space-between; */
@@ -186,7 +186,7 @@
     height: calc(100vh * (200/844));
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     width:auto;
-    padding: 0 0 1em 0;
+    padding: 0 0em 1em 0em;
     margin: 0;
     margin-top:2em;
   }
@@ -195,7 +195,7 @@
     display: flex;
     justify-content: center;
     margin-bottom: 10px;
-    width:auto;
+    width: 18.5em;
   }
   
   .categoryTab1, .categoryTab2 {
@@ -212,7 +212,7 @@
   }
 
   .categoryTab.Active {
-    background-color: var(--mid);
+    background-color: var(--darker);
     color: white;
   }
   
@@ -220,6 +220,7 @@
     display: flex;
     justify-content: center;
     gap:0.9em;
+    margin: 0 1.5em;
   }
   
   .subTab {
@@ -227,28 +228,29 @@
     font-size:0.5em;
     height: 2em;
     width: 4em;
-    cursor: pointer;
-    border: 1px solid var(--brighter);
-    color: var(--brighter);
+    border: 1px solid var(--darker);
+    color: var(--darker);
     align-items: center; 
     justify-content: center; 
     text-align: center; 
     padding-top: 0.2em;
-
+    margin-bottom: 0.2em;
   }
-  
+  .subTab:hover{
+    cursor: pointer;
+  }
   .subTab.Active {
-    background-color:var(--mid);;
+    background-color:var(--darker);;
     color: white;
   }
   
-  .posts {
+  .posts {  
     display: flex;
     flex-direction: column;
     gap:0.4em;
-    padding: 0.5em 0.6em;
-    margin: 0 2em;
-    
+    padding: 0.5em 1.1em; 
+    margin: 0 0;
+
   }
   .post {
     display: flex;
@@ -257,6 +259,12 @@
   }
   .post:hover{
     cursor: pointer;
+  }
+  .categoryIcon{
+    width:1.2em;
+    height: auto;
+    margin-right:0.5em;
+    margin-top:0.2em;
   }
   .postIcon {
     width: 0.5em;
@@ -278,11 +286,21 @@
     margin: 2em 0;
   }
   .freeBoardHeader{
-    color: var(--mid);
-    padding: 0.4em 0 0 2em;
+    color: var(--darker);
+    padding: 0.4em 0 0 1.3em;
   }
   .freeBoardHeader:hover{
     cursor: pointer;
+  }
+  .freeBoardHeader:after {
+    content: ""; 
+    display: block;
+    flex-grow: 1; 
+    height: 0.3px; 
+    width:15.7em;
+    background-color: #9a9a9a; 
+    margin-left: 0.1em; 
+    margin-top:0.2em;
   }
   .posts2 {
     display: flex;
@@ -296,5 +314,6 @@
     margin-left: 0.7em;
     font-size: 0.7em;
     font-weight: 600;
-    color: var(--brighter);
+    color: var(--darker);
+    margin-left:auto;
   }
